--- a/index.htm
+++ b/index.htm
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joyeria Puta Barata</title>
+    <title>Joyeria Barata</title>
 </head>
 <body>
 <h1>Bienvienida Puta!</h1>
 <p>Bienvenida a la tienda de joyas más barata del mundo, igual de barata que tu!.</p>
-<footer> DerechoS Reservados a pUtas asosiations
+<footer> DerechoS Reservados a asosiations
     <p>Derechos reservados &copy; 2025</p>
     <p>Contacto
 </footer>    
