--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <title>Joyeria Barata</title>
 </head>
 <body>
-<h1>Bienvienida Puta!</h1>
+<h1>Bienvienida !</h1>
 <p>Bienvenida a la tienda de joyas más barata del mundo, igual de barata que tu!.</p>
 <footer> DerechoS Reservados a asosiations
     <p>Derechos reservados &copy; 2025</p>
